--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,8 @@
     <meta property="og:url" content="https://food.felf.io">
     <meta property="og:title" content="felfio - AAUFood">
     <meta property="og:description" content="Essensauswahl leicht gemacht! food.felf.io hilft beim Vergleich der angebotenen Mittagsmenüs ausgewählter Restaurants rund um die Alpen-Adria-Universität Klagenfurt.">
-    <meta property="og:image" content="https://food.felf.io/images/food.felfio-banner2-comp.png">
-    <meta property="og:image:secure_url" content="https://food.felf.io/images/food.felfio-banner2-comp.png">
+    <meta property="og:image" content="https://food.felf.io/images/food.felfio-banner2.png">
+    <meta property="og:image:secure_url" content="https://food.felf.io/images/food.felfio-banner2.png">
     <meta property="og:image:type" content="image/png">
 
     <title><%= title ? title : "AAU Food" %></title>
