add more meta tags for twitter

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <meta name="HandheldFriendly" content="true" />
 
-    <!-- Some meta-tags for social networks -->
+    <!-- Some meta-tags for facebook (open graph thing) -->
     <meta property="og:url" content="https://food.felf.io">
     <meta property="og:title" content="felfio - AAUFood">
     <meta property="og:description" content="Essensauswahl leicht gemacht! food.felf.io hilft beim Vergleich der angebotenen Mittagsmenüs ausgewählter Restaurants rund um die Alpen-Adria-Universität Klagenfurt.">
     <meta property="og:image" content="https://food.felf.io/images/food.felfio-banner2.png">
     <meta property="og:image:secure_url" content="https://food.felf.io/images/food.felfio-banner2.png">
     <meta property="og:image:type" content="image/png">
+
+    <!-- Some more meta-tags for twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="felfio - AAUFood">
+    <meta name="twitter:image" content="https://food.felf.io/images/food.felfio-banner2.png">
+    <meta name="twitter:description" content="Essensauswahl leicht gemacht! food.felf.io hilft beim Vergleich der angebotenen Mittagsmenüs ausgewählter Restaurants rund um die Alpen-Adria-Universität Klagenfurt.">
 
     <title><%= title ? title : "AAU Food" %></title>
 
