--- a/views/partials/combined-menu-list.ejs
+++ b/views/partials/combined-menu-list.ejs
@@ -26,7 +26,7 @@
 	    <% } else if (menu != null && menu.outdated){ %>
             <div class="text-xs-center">
                 <i class="fa fa-calendar-times-o fa-2x info-icon" aria-hidden="true"></i><br>
-                Das Lokal hat das aktuelle Wochenmenü noch nicht auf seiner
+                Das Lokal hat das aktuelle Wochenmenü zurzeit nicht auf seiner
                 <a href="<%= userFriendlyUrl(restaurantNameLower) %>" target="_blank">Homepage</a>
                 veröffentlicht.
             </div>
