--- a/views/partials/menu-list.ejs
+++ b/views/partials/menu-list.ejs
@@ -23,6 +23,11 @@
                 <i class="fa fa-bed fa-2x info-icon" aria-hidden="true"></i><br>
                 Heute leider geschlossen.
             </div>
+            <% } else if (menu != null && menu.noMenu){ %>
+            <div class="text-xs-center">
+                <i class="fa fa-book fa-2x info-icon" aria-hidden="true"></i><br>
+                Heute leider nur à la carte.
+            </div>
             <% } else if (menu != null && menu.outdated){ %>
             <div class="text-xs-center">
                 <i class="fa fa-calendar-times-o fa-2x info-icon" aria-hidden="true"></i><br>
