--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -1,4 +1,4 @@
-@import '~bootstrap/dist/css/bootstrap.css';
+@import '~bootstrap/scss/bootstrap.scss';
 @import '~font-awesome/css/font-awesome.css';
 @import 'spinner.scss';
 @import 'about.scss';
