--- a/views/partials/menu-list.ejs
+++ b/views/partials/menu-list.ejs
@@ -56,7 +56,7 @@
                 <% menu.mains.forEach(function (main) { %>
                 <li class="list-group-item">
                     <% if(main.price != null) { %>
-                        <span class="label label-default label-pill price-pill pull-xs-right"><%= main.price + " €" %></span>
+                        <span class="tag tag-default tag-pill price-pill pull-xs-right"><%= main.price + " €" %></span>
                     <% }%>
                           <span class="menu-name">
                             <%= main.name %>
