--- a/public/styles/about.scss
+++ b/public/styles/about.scss
@@ -68,12 +68,20 @@ $card-header-bg: rgba(0, 0, 0, 0.7);
   height: auto;
 }
 
+.sponsors .sponsor-images {
+  text-align: center;
+
+  img {
+    max-height: 6em;
+  }
+}
+
 @mixin name($color) {
   &.a {
     color: inherit;
   }
 
-  color: $color ;
+  color: $color;
   font-weight: bold;
 }
 
@@ -82,8 +90,8 @@ $card-header-bg: rgba(0, 0, 0, 0.7);
 }
 
 #fabian {
-   @include name(#09B22E);
- }
+  @include name(#09B22E);
+}
 
 #markus {
   @include name(#4B09B2);
