--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -5,7 +5,7 @@
 /*@import 'ribbons.scss';*/
 
 //Switches
-$winterTheme: true;
+$winterTheme: false;
 $winterTextColor: #f5f5f5;
 
 /*Colors and definitions*/
