--- a/views/partials/weekday-menu.ejs
+++ b/views/partials/weekday-menu.ejs
@@ -1,7 +1,7 @@
 <% day = day % 7 %>
 <div class="weekday-container">
     <div class="row">
-        <div class="col-xl-4 col-xl-offset-4 weekday-header">
+        <div class="ml-auto mr-auto weekday-header">
             <span class="weekday">
                 <span class="nav-icon left top pull-left">
                     <i class="fa fa-angle-left" aria-hidden="true"></i>
