Basic print view (to be refined)

--- a/views/partials/weekday-menu.ejs
+++ b/views/partials/weekday-menu.ejs
@@ -6,7 +6,7 @@
                 <span class="nav-icon left top mr-auto">
                     <i class="fa fa-angle-left" aria-hidden="true"></i>
                 </span>
-                <%= weekDayName(day) %>
+                <%= timeHelper.weekDayName(day) %>
                 <span class="nav-icon right top ml-auto">
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </span>
