changed title in Cityfood view to Cityfood.felf.io

--- a/views/cityfood.ejs
+++ b/views/cityfood.ejs
@@ -1,5 +1,4 @@
-<% var title = 'AAU Food'; %>
-<% include partials/header.ejs %>
+<%- include('partials/header.ejs', {title: "Cityfood.felf.io"}) %>
 
 <div class="nav-icons-center">
         <span class="nav-icon left center">
