fix some spacings

--- a/views/partials/combined-menu-list.ejs
+++ b/views/partials/combined-menu-list.ejs
@@ -1,5 +1,5 @@
 <% var restaurantNameLower = restaurantName.replace(" ", "-").toLowerCase(); %>
-<div class="card <%= restaurantNameLower %> combined-menu-list">
+<div class="card <%= restaurantNameLower %> combined-menu-list mb-3">
     <h3 class="card-header">
 	<%= restaurantName %>
         <a class="link-icon" target="_blank" href="<%= userFriendlyUrl(restaurantNameLower) %>">
