--- a/views/partials/weekday-menu.ejs
+++ b/views/partials/weekday-menu.ejs
@@ -1,13 +1,13 @@
 <% day = day % 7 %>
 <div class="weekday-container">
-    <div class="row">
+    <div class="row mb-2">
         <div class="ml-auto mr-auto weekday-header">
             <span class="weekday">
-                <span class="nav-icon left top pull-left">
+                <span class="nav-icon left top mr-auto">
                     <i class="fa fa-angle-left" aria-hidden="true"></i>
                 </span>
                 <%= weekDayName(day) %>
-                <span class="nav-icon right top pull-right">
+                <span class="nav-icon right top ml-auto">
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                 </span>
             </span>
