--- a/views/partials/menu-list.ejs
+++ b/views/partials/menu-list.ejs
@@ -45,6 +45,7 @@
             </div>
             <% } else { %>
             <% if(menu.starters.length) { %>
+                <h5>Starters</h5>
                 <ul class="list-group menu-list-group starters">
                     <% menu.starters.forEach(function (starter) { %>
                     <li class="list-group-item"><%= starter.name %></li>
@@ -54,15 +55,16 @@
             <% if(menu.mains.length) { %>
             <ul class="list-group menu-list-group mains">
                 <% menu.mains.forEach(function (main) { %>
-                <li class="list-group-item">
-		    <div class="d-flex flex-row">
+                <div class="d-flex align-items-start">
+                <h5>mjam</h5>
+                <% if(main.price != null) { %>
+                <span class="badge badge-default badge-pill price-pill ml-auto mr-0"><%= main.price + " €" %></span>
+                <% }%>
+                </div>
+                <li class="list-group-item d-flex flex-row">
 		    <div><span class="menu-name">
                        <%= main.name %>
                     </span></div>
-		    <% if(main.price != null) { %>
-                        <div><span class="badge badge-default badge-pill price-pill pull-right"><%= main.price + " €" %></span></div>
-                    <% }%>
-		    </div>
                 </li>
                 <% }); %>
             </ul>
