--- a/views/print.ejs
+++ b/views/print.ejs
@@ -83,9 +83,9 @@
         <td>
             <ul>
                 <% mensa[i].mains.forEach(function (menu) { %>
-                <% menu.name.forEach(function (name) { %>
+                <% menu.name.forEach(function (name) { if (name!="") { %>
                 <li><%= name %></li>
-                <% }); %>
+                <% }}); %>
                 <br>
                 <% }); %>
             </ul>
@@ -99,15 +99,15 @@
         <% for(let i = 0; i < 6; i++) { %>
         <td>
             <ul class="starters">
-                <% uniwirt[i].starters.forEach(function (food) { %>
+                <% uniwirt[i].starters.forEach(function (food) { if (food.name!="") { %>
                 <li><%= food.name %></li>
-                <% }); %>
+                <% }}); %>
             </ul>
 
             <ul class="mains">
-                <% uniwirt[i].mains.forEach(function (food) { %>
+                <% uniwirt[i].mains.forEach(function (food) { if (food.name!="") { %>
                 <li><%= food.name %></li>
-                <% }); %>
+                <% }}); %>
             </ul>
         </td>
         <% } %>
@@ -119,15 +119,15 @@
         <% for(let i = 0; i < 6; i++) { %>
         <td>
             <ul class="starters">
-                <% mittagstisch[i].starters.forEach(function (food) { %>
+                <% mittagstisch[i].starters.forEach(function (food) { if (food.name!="") { %>
                 <li><%= food.name %></li>
-                <% }); %>
+                <% }}); %>
             </ul>
 
             <ul class="mains">
-                <% mittagstisch[i].mains.forEach(function (food) { %>
+                <% mittagstisch[i].mains.forEach(function (food) { if (food.name!="") { %>
                 <li><%= food.name %></li>
-                <% }); %>
+                <% }}); %>
             </ul>
         </td>
         <% } %>
@@ -138,15 +138,15 @@
         <% for(let i = 0; i < 6; i++) { %>
         <td>
             <ul class="starters">
-                <% uniPizzeria[i].starters.forEach(function (food) { %>
+                <% uniPizzeria[i].starters.forEach(function (food) { if (food.name!="") { %>
                 <li><%= food.name %></li>
-                <% }); %>
+                <% }}); %>
             </ul>
 
             <ul class="mains">
-                <% uniPizzeria[i].mains.forEach(function (food) { %>
+                <% uniPizzeria[i].mains.forEach(function (food) { if (food.name!="") { %>
                 <li><%= food.name %></li>
-                <% }); %>
+                <% }}); %>
             </ul>
         </td>
         <% } %>
