--- a/views/print.ejs
+++ b/views/print.ejs
@@ -6,6 +6,15 @@
         background: none;
     }
 
+    ul {
+        padding-left: 10px;
+        list-style-type: none;
+    }
+
+    li {
+        margin-bottom: 3px;
+    }
+
     table {
         font-size: 8pt;
     }
@@ -16,6 +25,10 @@
 
     .new-page {
         page-break-after: always;
+    }
+
+    .namecol {
+        font-size: 13px;
     }
 
     td > .name {
