.sponsors not necessary

--- a/public/styles/about.scss
+++ b/public/styles/about.scss
@@ -68,7 +68,7 @@ $card-header-bg: rgba(0, 0, 0, 0.7);
   height: auto;
 }
 
-.sponsors .sponsor-images {
+.sponsor-images {
   text-align: center;
 
   img {
