items in footer should not stretch

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
     <a href="https://www.felf.io/about.html" id="impressum" class="label label-dark label-pill">Impressum</a>
 </div>-->
 <div id="cookieConsentHolder"></div>
-<footer class="footer d-flex flex-row">
+<footer class="footer d-flex flex-row align-items-center">
     <span class="daily-counter ml-2" title="Besucher heute">
         <i class="fa fa-fw fa-clock-o" aria-hidden="true"></i>
         <span id="dailyVisitors"><%= visitorStats.dailyVisitors %></span>
