--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,16 +3,16 @@
 </div>-->
 <div id="cookieConsentHolder"></div>
 <footer class="footer d-flex flex-row align-items-center">
-    <span class="daily-counter ml-2" title="Besucher heute">
+    <div class="daily-counter" title="Besucher heute">
         <i class="fa fa-fw fa-clock-o" aria-hidden="true"></i>
         <span id="dailyVisitors"><%= visitorStats.dailyVisitors %></span>
-    </span>
+    </div>
 
-    <span class="footer-pun mx-auto">
+    <div class="footer-pun mx-auto">
         <%- getFooterPun() %>
-    </span>
+    </div>
 
-    <div class="btn-group dropup mr-2">
+    <div class="btn-group dropup sitemap">
         <button type="button" class="btn btn-outline-secondary btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="hidden-sm-down">Sitemap</span>
             <i class="fa fa-map-signs"></i>
