fix card-block --> card-body

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,7 +8,7 @@
             <div class="mx-auto back-icon-container">
                 <a href="/">
                     <div class="card center-block">
-                        <div class="card-block">
+                        <div class="card-body">
                             <i class="fa fa-cutlery fa-3x" aria-hidden="true"></i>
                         </div>
                     </div>
@@ -20,7 +20,7 @@
             <div class="col-lg-8 mx-auto">
                 <div class="card about-us mb-3">
                     <h3 class="card-header">Über uns</h3>
-                    <div class="card-block">
+                    <div class="card-body">
                         <p class="card-text">Diese Homepage ist ein Hobbyprojekt und steht in keinerlei Verbindung mit
                             den angeführten Restaurants. Damit sind die Formalitäten erledigt.</p>
                         <p class="card-text">So ein Mittagessen kann schon was und man sollte nie auf eine anständige
@@ -66,7 +66,7 @@
                     <div class="card-img-top cat-fact-header">
                         <img src="<%= catFactHeaderUrl() %>" alt="Random Kitten Image"/>
                     </div>
-                    <div class="card-block">
+                    <div class="card-body">
                         <h4 class="card-title">Random Cat Fact</h4>
                         <p class="card-text">
                             <%= catFact %>
@@ -76,7 +76,7 @@
             </div>
             <div class="flex-1">
                 <div class="card">
-                    <div class="card-block">
+                    <div class="card-body">
                         <h4 class="card-title">
                             <i class="fa fa-fw fa-smile-o" aria-hidden="true"></i> Danke!
                         </h4>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="card mt-3">
-                    <div class="card-block">
+                    <div class="card-body">
                         <h4 class="card-title">
                             <i class="fa fa-fw fa-clock-o" aria-hidden="true"></i>
                             Besucher heute: <%= visitorStats.dailyVisitors %></h4>
