--- a/views/partials/combined-menu-list.ejs
+++ b/views/partials/combined-menu-list.ejs
@@ -6,7 +6,7 @@
 	    <span class="fa fa-globe pull-right" aria-hidden="true"></span>
 	</a>
     </h3>
-    <div class="card-block">
+    <div class="card-body">
         <% var breakInfo = getBreakInfo(restaurantNameLower) %>
         <% if(isOnBreak(breakInfo)) { %>
         <div class="on-break">
