--- a/views/cityfood.ejs
+++ b/views/cityfood.ejs
@@ -1,4 +1,5 @@
-<%- include('partials/header.ejs', {title: "Cityfood.felf.io"}) %>
+<% var title = 'Cityfood.felf.io'; %>
+<% include partials/header.ejs %>
 
 <div class="nav-icons-center">
         <span class="nav-icon left center">
