--- a/views/cityfood.ejs
+++ b/views/cityfood.ejs
@@ -1,4 +1,4 @@
-<% var title = 'Cityfood.felf.io'; %>
+<% var title = 'Cityfood'; %>
 <% include partials/header.ejs %>
 
 <div class="nav-icons-center">
