Change variable-name from princessBg to princsBg

--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -14,7 +14,7 @@ $mensaOrange: #f49900;
 $uniwirtPurple: #800768;
 $uniPizzeriaBg: #2336B1;
 $laPastaBg: #ca0928;
-$princessBg: #e30613;
+$princsBg: #e30613;
 $navIconMargin: 3rem;
 $navIconMarginInwards: 1rem;
 $outerPadding: 0.9375rem;
@@ -181,7 +181,7 @@ body {
 }
 
 .princs {
-  @include restaurantColors($princessBg, white);
+  @include restaurantColors($princsBg, white);
 }
 
 @mixin footerIcon($color) {
