fix bad overflow (looking at you, mittagstisch!)

--- a/public/styles/app.scss
+++ b/public/styles/app.scss
@@ -140,6 +140,10 @@ body {
   }
 }
 
+.menu-name-container {
+  overflow-x: auto;
+}
+
 /*Restaurant-specific*/
 @mixin restaurantColors($bgColor, $fontColor) {
   .card-header, .price-pill {
