--- a/views/partials/menu-list.ejs
+++ b/views/partials/menu-list.ejs
@@ -65,7 +65,7 @@
                 <% }%>
                 </div>
                 <li class="list-group-item d-flex flex-row">
-		    <div><span class="menu-name">
+                  <div class="menu-name-container"><span class="menu-name">
                        <%= main.name %>
                     </span></div>
                 </li>
