Refactored all views // Changed mensa model // [Still unstyled]

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,5 @@
 <% var title = 'AAU Food: About'; %>
-<% include partials/header.ejs %>
+<% include partials/common/header.ejs %>
 
 
 <div class="container d-flex flex-column">
@@ -107,4 +107,4 @@
 <script>
 </script>
 
-<% include partials/footer.ejs %>
+<% include partials/common/footer.ejs %>
