--- a/views/print.ejs
+++ b/views/print.ejs
@@ -1,5 +1,5 @@
 <% var title = 'AAU Food: Wochenplan'; %>
-<% include partials/header.ejs %>
+<% include partials/common/header.ejs %>
 
 <style>
     body {
@@ -117,7 +117,7 @@
         <td class="datacol">
             <ul>
                 <% mensa[i].mains.forEach(function (menu) { %>
-                <% menu.name.forEach(function (name) { if (name!="") { %>
+                <% menu.entries.forEach(function (name) { if (name!="") { %>
                 <li><%= name %></li>
                 <% }}); %>
                 <br>
