Redesigned page (card content pending)

--- a/views/partials/day.ejs
+++ b/views/partials/day.ejs
@@ -7,7 +7,7 @@
             </span>
         </div>
     </div>
-    <div class="row">
+    <div class="row restaurants-row">
         <div class="col-xl-3 col-lg-6 col-md-12">
             <%- include('restaurant', {restaurant: 'mensa', restaurantName: 'Mensa', menu: mensa ? mensa[day] : null, combinedMenuList: true}) %>
         </div>
