--- a/views/partials/day-cityfood.ejs
+++ b/views/partials/day-cityfood.ejs
@@ -7,7 +7,7 @@
             </span>
         </div>
     </div>
-    <div class="row">
+    <div class="row restaurants-row">
         <div class="col-xl-6 col-lg-6 col-md-12">
             <%- include('restaurant', {restaurant: 'la-pasta', restaurantName: 'La Pasta', menu: lapasta ? lapasta[day] : null}) %>
         </div>
